[gd_scene load_steps=3 format=3 uid="uid://unlkigs7sul7"]

[ext_resource type="Script" uid="uid://da432f0pcyjbi" path="res://Scripts/SettingsMenu.gd" id="1_8ef0u"]
[ext_resource type="FontFile" uid="uid://bkhq4ux8vfrvk" path="res://assets/fonts/VCR_OSD_MONO_1.001.ttf" id="2_7y5a0"]

[node name="SettingsMenu" type="Window"]
position = Vector2i(0, 36)
size = Vector2i(1500, 800)
script = ExtResource("1_8ef0u")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.027451, 0.0431373, 0.0627451, 1)

[node name="SettingsTab" type="TabContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
current_tab = 0

[node name="Video" type="TabBar" parent="SettingsTab"]
layout_mode = 2
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="SettingsTab/Video"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VideoSettings" type="GridContainer" parent="SettingsTab/Video/MarginContainer"]
layout_mode = 2
theme_override_constants/v_separation = 15
columns = 2

[node name="DisplayMode" type="Label" parent="SettingsTab/Video/MarginContainer/VideoSettings"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_7y5a0")
theme_override_font_sizes/font_size = 40
text = "Display Mode"

[node name="DisplayModeOptions" type="OptionButton" parent="SettingsTab/Video/MarginContainer/VideoSettings"]
custom_minimum_size = Vector2(500, 50)
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("2_7y5a0")
theme_override_font_sizes/font_size = 40
selected = 0
item_count = 4
popup/item_0/text = "FullScreen"
popup/item_0/id = 0
popup/item_1/text = "1536x864"
popup/item_1/id = 1
popup/item_2/text = "1366x768"
popup/item_2/id = 2
popup/item_3/text = "1280x720"
popup/item_3/id = 3

[node name="Vsync" type="Label" parent="SettingsTab/Video/MarginContainer/VideoSettings"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_7y5a0")
theme_override_font_sizes/font_size = 40
text = "Vsync"

[node name="VsyncBtn" type="CheckButton" parent="SettingsTab/Video/MarginContainer/VideoSettings"]
custom_minimum_size = Vector2(500, 50)
layout_mode = 2

[node name="DisplayFPS" type="Label" parent="SettingsTab/Video/MarginContainer/VideoSettings"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_7y5a0")
theme_override_font_sizes/font_size = 40
text = "Display FPS"

[node name="FpsBtn" type="CheckButton" parent="SettingsTab/Video/MarginContainer/VideoSettings"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="MaxFPS" type="Label" parent="SettingsTab/Video/MarginContainer/VideoSettings"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_7y5a0")
theme_override_font_sizes/font_size = 40
text = "Max FPS"

[node name="MaxFPSContainer" type="HBoxContainer" parent="SettingsTab/Video/MarginContainer/VideoSettings"]
custom_minimum_size = Vector2(500, 50)
layout_mode = 2
size_flags_horizontal = 10
theme_override_constants/separation = 50

[node name="FPS" type="Label" parent="SettingsTab/Video/MarginContainer/VideoSettings/MaxFPSContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_7y5a0")
theme_override_font_sizes/font_size = 40
text = "Max"

[node name="SliderMaxFps" type="HSlider" parent="SettingsTab/Video/MarginContainer/VideoSettings/MaxFPSContainer"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 1
min_value = 30.0
max_value = 500.0
value = 500.0
rounded = true

[node name="Brightness" type="Label" parent="SettingsTab/Video/MarginContainer/VideoSettings"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_7y5a0")
theme_override_font_sizes/font_size = 40
text = "Brightness"

[node name="MaxBrightnessContainer2" type="HBoxContainer" parent="SettingsTab/Video/MarginContainer/VideoSettings"]
custom_minimum_size = Vector2(500, 50)
layout_mode = 2
size_flags_horizontal = 10
theme_override_constants/separation = 50

[node name="Brightness" type="Label" parent="SettingsTab/Video/MarginContainer/VideoSettings/MaxBrightnessContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_7y5a0")
theme_override_font_sizes/font_size = 40
text = "Max"

[node name="SliderBrightness" type="HSlider" parent="SettingsTab/Video/MarginContainer/VideoSettings/MaxBrightnessContainer2"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 1
max_value = 2.0
step = 0.1
value = 1.0

[node name="Audio" type="TabBar" parent="SettingsTab"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="MarginContainer" type="MarginContainer" parent="SettingsTab/Audio"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="SettingsTab/Audio/MarginContainer"]
layout_mode = 2
theme_override_constants/v_separation = 15
columns = 2

[node name="LabelMasterVol" type="Label" parent="SettingsTab/Audio/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_7y5a0")
theme_override_font_sizes/font_size = 40
text = "Master Volume"

[node name="SliderMasterVol" type="HSlider" parent="SettingsTab/Audio/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 1
value = 50.0
rounded = true

[node name="LabelMusicVol" type="Label" parent="SettingsTab/Audio/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_7y5a0")
theme_override_font_sizes/font_size = 40
text = "Music Volume"

[node name="SliderMusicVol" type="HSlider" parent="SettingsTab/Audio/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 1
value = 50.0
rounded = true

[node name="LabelSFXVol" type="Label" parent="SettingsTab/Audio/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_7y5a0")
theme_override_font_sizes/font_size = 40
text = "SFX Volume"

[node name="SliderSFXVol" type="HSlider" parent="SettingsTab/Audio/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 1
value = 50.0
rounded = true

[connection signal="item_selected" from="SettingsTab/Video/MarginContainer/VideoSettings/DisplayModeOptions" to="." method="_on_display_mode_options_item_selected"]
[connection signal="toggled" from="SettingsTab/Video/MarginContainer/VideoSettings/VsyncBtn" to="." method="_on_vsync_btn_toggled"]
[connection signal="toggled" from="SettingsTab/Video/MarginContainer/VideoSettings/FpsBtn" to="." method="_on_fps_btn_toggled"]
[connection signal="value_changed" from="SettingsTab/Video/MarginContainer/VideoSettings/MaxFPSContainer/SliderMaxFps" to="." method="_on_slider_max_fps_value_changed"]
[connection signal="value_changed" from="SettingsTab/Video/MarginContainer/VideoSettings/MaxBrightnessContainer2/SliderBrightness" to="." method="_on_slider_brightness_value_changed"]
[connection signal="value_changed" from="SettingsTab/Audio/MarginContainer/GridContainer/SliderMasterVol" to="." method="_on_slider_master_vol_value_changed"]
[connection signal="value_changed" from="SettingsTab/Audio/MarginContainer/GridContainer/SliderMusicVol" to="." method="_on_slider_music_vol_value_changed"]
[connection signal="value_changed" from="SettingsTab/Audio/MarginContainer/GridContainer/SliderSFXVol" to="." method="_on_slider_sfx_vol_value_changed"]
